--- a/_config.yml
+++ b/_config.yml
@@ -3,28 +3,15 @@
 # # # # # # # # # # # # #
 
 # Basic
-name:               "Kiko Plus"
+name:               "유연한 외곬 블로그"
 
 author:
-  facebook:         your-id
-  youtubeUser:      your-id
-  youtubeChannel:   your-id
-  twitter:          your-id
-  github:           your-id
-  stackoverflow:    your-id
-  quora:            your-id
-  linkedin:         your-id
-  pinterest:        your-id
-  googlePlus:       your-id
-  instagram:        your-id
-  reddit:           your-id
-  medium:           your-id
-  tumblr:           your-id
-  email:            your-id@your-email.com
+  github:           https://TaeHyoungKwon.github.io
+  email:            kwon5604@gmail.com
 
 copyright:
-  year:             2017
-  name:             Kiko
+  year:             2020
+  name:             THKwon
 
 # Google-analytics
 google-analytics:
@@ -62,7 +49,7 @@ nav:
   - name:           "Tags"
     url:            "/tags"
   - name:           "Github"
-    url:            "https://github.com/AWEEKJ/Kiko-plus"
+    url:            "https://github.com/TaeHyoungKwon"
 
 # Sass
 sass:
