--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name:               "유연한 외곬 블로그"
 
 author:
-  github:           https://TaeHyoungKwon.github.io
+  github:           TaeHyoungKwon
   email:            kwon5604@gmail.com
 
 copyright:
